--- a/测试.md
+++ b/测试.md
@@ -12,8 +12,8 @@
 ### 三级标题1
 正文
 [超链接](https://1050625.github.io/wiki)
-插入图片（百度百科上找的图，方括号前面加个! ，圆括号里放链接）：
-![插入图片](https://bkimg.cdn.bcebos.com/pic/f9198618367adab44aedc30c8383a41c8701a18b4e7e?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2UyMjA=,g_7,xp_5,yp_5/format,f_auto)
+插入图片（百度百科上找的图，方括号前面加个! ，里面放图片加载不出来时显示的文字，圆括号里放链接）：
+![图片无法加载](https://bkimg.cdn.bcebos.com/pic/f9198618367adab44aedc30c8383a41c8701a18b4e7e?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2UyMjA=,g_7,xp_5,yp_5/format,f_auto)
 ### 三级标题2
 无序列表：(编辑的时候用tab键缩进)
 
